<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dividir">

    <Button
        android:id="@+id/btndivicion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="60dp"
        android:text="@string/division"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnregresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/regresar"
        app:layout_constraintBottom_toTopOf="@+id/txnum1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toEndOf="@+id/btndivicion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="196dp"
        android:layout_height="59dp"
        android:text="@string/division"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txnum1"
        android:layout_width="342dp"
        android:layout_height="54dp"
        android:layout_marginBottom="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ingrese_numero_1"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/txtnum2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndivicion" />

    <EditText
        android:id="@+id/txtnum2"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/ingrese_numero2"
        android:inputType="textPersonName"
        android:textColorHint="#050505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lblresultado"
        android:layout_width="282dp"
        android:layout_height="58dp"
        android:layout_marginBottom="180dp"
        android:text="@string/resultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>